--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">SimpleChat</string>
+    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
+    <string name="nickname_hint">Enter nickname</string>
+    <string name="nickname_error">You should enter a nickname longer than 2 characters</string>
+    <string name="start_chat">Continue</string>
 </resources>
