--- a/app/src/main/res/values-tr-rTR/strings.xml
+++ b/app/src/main/res/values-tr-rTR/strings.xml
@@ -4,4 +4,5 @@
     <string name="start_chat">Devam Et</string>
     <string name="nickname_hint">Takma ad girin</string>
     <string name="nickname_error">2 karakterden uzun bir takma ad girmelisiniz</string>
+    <string name="msg_box_hint">Merhaba</string>
 </resources>
